apps/agent/huginn-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: huginn-deployment
  namespace: agent
  labels:
    app-name: huginn
    version: ${HUGINN_VERSION}
    component: agent-to-handover-work
    hostNetwork: "no"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: huginn
  template:
    metadata:
      name: huginn
      labels:
        app-name: huginn
    spec:
      containers:
        - name: huginn
          image: '${HUGINN_IMAGE}:${HUGINN_VERSION}'
          imagePullPolicy: Always
          securityContext:
            privileged: false
      restartPolicy: Always
